--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-	text-align: center;
 	font-size: calc(10px + 2vmin);
 }
-
+h4 {
+	margin: 1rem 2rem;
+}
 .App-header {
 	background-color: #282c34;
 	min-height: 100vh;
