--- a/src/form.css
+++ b/src/form.css
@@ -1,10 +1,13 @@
 .form {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	margin: 2rem 0.8rem;
 }
-h4 {
-	text-align: left;
+
+label {
+	align-self: flex-start;
+	margin: 0 2.2rem;
 }
 
 input {
