--- a/src/template1.css
+++ b/src/template1.css
@@ -1,18 +1,19 @@
 .template1 {
-	margin: 2rem 0.8rem;
+	/* margin: 2rem 0.8rem; */
 	flex: 1;
+	background-color: #0bf48c;
+}
+.signature {
+	margin: 5rem;
+	padding: 2rem;
+	background-color: white;
+	border-radius: 10px;
 }
 
-.social-links {
+.details {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-evenly;
 }
-.social-logo {
-	height: 1.5rem;
-	width: 1.5rem;
-	margin-right: 1rem;
-}
-
 .profile-img {
 	height: 5rem;
 	width: 7rem;
@@ -29,13 +30,16 @@ p {
 	margin: 0;
 }
 
-.details {
-	display: flex;
+.details p {
+	font-size: 1rem;
 }
 
-/* .basic-details {
-} */
-
-.signature {
-	margin: 5rem;
+.social-links {
+	display: flex;
+	justify-content: flex-end;
+}
+.social-logo {
+	height: 1.5rem;
+	width: 1.5rem;
+	margin-right: 1rem;
 }
