--- a/src/form.css
+++ b/src/form.css
@@ -1,3 +1,9 @@
+.form-container {
+	/* background-color: #33475b; */
+	background-color: #417d78;
+	color: #fff;
+}
+
 .form {
 	display: flex;
 	flex-direction: column;
@@ -13,20 +19,28 @@ label {
 input {
 	width: 15rem;
 	border: none;
-	border-bottom: 2px solid gray;
+	border-bottom: 2px solid #fff;
 	height: 2rem;
 	margin: 0.5rem 0;
-	color: rgb(51, 51, 51);
+	color: #fff;
+	background-color: unset;
 }
-
+input::placeholder {
+	color: rgb(175, 179, 175);
+}
+input:focus,
+input:active {
+	outline: none;
+	border-color: #0bf48c;
+}
 label,
 input {
 	font-size: 1rem;
 }
 
 .submit-btn {
-	background-color: blue;
-	color: white;
+	background-color: #0bf48c;
+	color: black;
 	border: none;
 	border-radius: 5px;
 }
