--- a/src/template1.css
+++ b/src/template1.css
@@ -1,10 +1,9 @@
 .template1 {
-	/* margin: 2rem 0.8rem; */
 	flex: 1;
 	background-color: #0bf48c;
 }
 .signature {
-	margin: 5rem;
+	margin: 5rem 2.5rem;
 	padding: 2rem;
 	background-color: white;
 	border-radius: 10px;
@@ -12,7 +11,7 @@
 
 .details {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 }
 .profile-img {
 	height: 5rem;
@@ -20,18 +19,29 @@
 	border-radius: 50%;
 }
 
-.full-name {
-	display: flex;
-	justify-content: space-between;
-	width: 11rem;
+p {
+	font-size: 0.8rem;
 }
+
+.fullname {
+	font-size: 1rem;
+}
+
 h5,
 p {
 	margin: 0;
 }
 
-.details p {
-	font-size: 1rem;
+.contact-details {
+	display: grid;
+	grid-template-columns: 10% 90%;
+	column-gap: 10px;
+}
+
+.contact-icon {
+	height: 1rem;
+	width: 1rem;
+	margin-top: 2px;
 }
 
 .social-links {
@@ -41,5 +51,9 @@ p {
 .social-logo {
 	height: 1.5rem;
 	width: 1.5rem;
-	margin-right: 1rem;
+	margin-left: 1rem;
+}
+
+.vr {
+	margin: 0;
 }
