--- a/src/template1.css
+++ b/src/template1.css
@@ -19,17 +19,24 @@
 	border-radius: 50%;
 }
 
-p {
+p,
+a {
 	font-size: 0.8rem;
-}
-
-.fullname {
-	font-size: 1rem;
+	padding: 5px 0;
 }
 
 h5,
 p {
 	margin: 0;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
+.fullname {
+	font-size: 1rem;
 }
 
 .contact-details {
@@ -41,7 +48,7 @@ p {
 .contact-icon {
 	height: 1rem;
 	width: 1rem;
-	margin-top: 2px;
+	margin-top: 5px;
 }
 
 .social-links {
