--- a/src/template1.css
+++ b/src/template1.css
@@ -11,7 +11,6 @@
 
 .details {
 	display: flex;
-	justify-content: space-between;
 }
 .profile-img {
 	height: 5rem;
@@ -62,5 +61,5 @@ a {
 }
 
 .vr {
-	margin: 0;
+	margin: 0 1rem;
 }
