use context api to pass form data from Form component to Template1 - create formContext, formReducer, FormState, types - wrap app component in FormState - create initial state with formData as an empty object - create SET_TEMPLATE type and getFormData method and set payload as the data from onsubmit - create formReducer - for action type SET_TEMPLATE, return state and formData

--- a/src/templates/template1/Template1.css
+++ b/src/templates/template1/Template1.css
@@ -3,10 +3,12 @@
 	background-color: #0bf48c;
 }
 .signature {
-	margin: 5rem 2.5rem;
+	margin: 3rem 6rem;
 	padding: 2rem;
 	background-color: white;
 	border-radius: 10px;
+	position: fixed;
+	top: 0rem;
 }
 
 .details {
