--- a/src/templates/template1/Template1.css
+++ b/src/templates/template1/Template1.css
@@ -1,9 +1,13 @@
 .template1 {
 	flex: 1;
 	background-color: #0bf48c;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 .signature {
-	margin: 3rem 6rem;
+	margin: 3rem;
 	padding: 2rem;
 	background-color: white;
 	border-radius: 10px;
